<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Grodno Bus</string>
    <string name="search_hint">Поиск</string>
    <string name="action_search">Поиск</string>
    <string name="action_del">Удалить</string>

    <string name="action_pref">Избранное</string>
    <string name="action_addpref">Добавить в избранное</string>
    <string name="action_delpref">Удалить из избранного</string>

    <string name="scheduleDate">09.11.2012</string>
    <string name="buses">Автобусы</string>
    <string name="troll">Троллейбусы</string>
    <string name="stops">Остановки</string>
    <string name="allbuses">Все маршруты на остановке</string>

    <string name="map">Карта</string>

    <string name="favorities">Избранное</string>
    <string name="favoritiesAreEmpty">Список избранного пуст</string>
    <string name="action_settings">Настройки</string>
    <string name="action_choose">Выбрать</string>
    <string name="check_inet_connection">Проверьте подключение к Интернет</string>
    <string name="update_error">"Ошибка обновления"</string>
    <string name="ok">OK</string>
    <string name="please_wait">Пожалуйста подождите</string>
    <string name="db_is_updating">Обновление расписания</string>
    <string name="mon">Понедельник</string>
    <string name="tue">Вторник</string>
    <string name="wed">Среда</string>
    <string name="thu">Четверг</string>
    <string name="fri">Пятница</string>
    <string name="sat">Суббота</string>
    <string name="sun">Воскресенье</string>
    <string name="dayoff">Выходной</string>
    <string name="workday">Рабочий</string>
    <string name="hour">ч</string>
    <string name="minute">м</string>
    <string name="ina">через</string>
    <string name="updatenotneeded">Обновление не требуется</string>
    <string name="updatesucceded">Обновление завершено</string>
    <string name="scheduleUpdated">Расписание обновлено</string>
    <string name = "error">Ошибка</string>
    <string name="errormarket">Could not launch the market</string>
    <string name="updateKey">updateIt</string>
    <string name="firstItemKey">firstItem</string>

    <string name="rateKey">rateIt</string>
    <string name="feedBackMail">mailto:greennn_2005@gmail.com</string>
    <string name="autoupdate">autoupdate</string>
    <string name="delfav">Удалить</string>
    <string name="nextBus">Следующий рейс :</string>
    <string name="inatime">Через </string>
    <string name="title_activity_maps">Карта</string>
    <string name="title_activity_google_maps">Карта</string>
    <string name="choose_buses">Выбрать транспорт</string>
    <string name="transport">Транспорт</string>
    <string name="bus_names">Автобусы</string>
    <string name="minibus_names">Маршрутки</string>
    <string name="tr_are_not_tracking">Троллейбусы не трэкаются</string>
    <string name="navigate">Проложить маршрут</string>
    <string name="inet_is_unavailable">Проверьте настройки доступа к сети Интернет</string>

    <string name="turn_on_gps">Пожалуйста, включите GPS</string>
     <string name="cancel">Отмена</string>
    <string name="GPS">GPS</string>
</resources>