<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Настройки">
        <PreferenceScreen
            android:title="Понравилось приложение?"
            android:summary="Оставить отзыв"
            android:key="@string/rateKey">
        </PreferenceScreen>

        <PreferenceScreen
            android:title="Есть предложения?"
            android:summary="Написать письмо автору"
            android:key="sendEmail">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/feedBackMail" />
        </PreferenceScreen>

        <CheckBoxPreference
            android:key="autoupdate"
            android:summary="Автообновление"
            android:defaultValue="true"
            android:title="Обновление"/>

        <PreferenceScreen
            android:title="Обновление"
            android:summary="Обновить расписание"
            android:key="@string/updateKey"
            >
        </PreferenceScreen>

    </PreferenceCategory>
</PreferenceScreen>
